--- a/app/src/main/res/layout/inc_select_bottom.xml
+++ b/app/src/main/res/layout/inc_select_bottom.xml
@@ -1,74 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container_selector"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:elevation="8dp"
-    android:id="@+id/container_selector"
     android:orientation="horizontal"
-    android:weightSum="5"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:weightSum="5">
 
-    <ImageButton
-        android:id="@+id/image_vote_up"
-        style="@style/Base.Widget.AppCompat.ImageButton"
-        android:layout_width="wrap_content"
+    <View
+        android:id="@+id/view_select_depth"
+        android:layout_width="5dp"
+        android:visibility="gone"
+        android:layout_height="match_parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:contentDescription="TODO"
-        android:ellipsize="end"
-        android:paddingBottom="@dimen/list_padding_vertical_author"
-        android:paddingEnd="@dimen/list_padding_horizontal_author"
-        android:paddingStart="@dimen/list_padding_horizontal_author" />
+        android:background="@android:color/background_light"
+        android:orientation="vertical">
 
-    <ImageButton
-        android:id="@+id/image_vote_down"
-        style="@style/Base.Widget.AppCompat.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:contentDescription="TODO"
-        android:paddingBottom="@dimen/list_padding_vertical_author"
-        android:paddingEnd="@dimen/list_padding_horizontal_author"
-        android:paddingStart="@dimen/list_padding_horizontal_author" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
+            <ImageButton
+                android:id="@+id/image_vote_up"
+                style="@style/Base.Widget.AppCompat.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:contentDescription="TODO"
+                android:ellipsize="end"
+                android:paddingBottom="@dimen/list_padding_vertical_author"
+                android:paddingEnd="@dimen/list_padding_horizontal_author"
+                android:paddingStart="@dimen/list_padding_horizontal_author" />
 
-    <ImageButton
-        android:id="@+id/image_prefer_stars"
-        style="@style/Base.Widget.AppCompat.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:contentDescription="TODO"
-        android:paddingBottom="@dimen/list_padding_vertical_author"
-        android:paddingEnd="@dimen/list_padding_horizontal_author"
-        android:paddingStart="@dimen/list_padding_horizontal_author" />
-
-    <ImageButton
-        android:id="@+id/image_show_comments"
-        style="@style/Base.Widget.AppCompat.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:contentDescription="TODO"
-        android:paddingBottom="@dimen/list_padding_vertical_author"
-        android:paddingEnd="@dimen/list_padding_horizontal_author"
-        android:paddingStart="@dimen/list_padding_horizontal_author" />
+            <ImageButton
+                android:id="@+id/image_vote_down"
+                style="@style/Base.Widget.AppCompat.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:contentDescription="TODO"
+                android:paddingBottom="@dimen/list_padding_vertical_author"
+                android:paddingEnd="@dimen/list_padding_horizontal_author"
+                android:paddingStart="@dimen/list_padding_horizontal_author" />
 
 
-    <ImageButton
-        android:id="@+id/image_open_browser"
-        style="@style/Base.Widget.AppCompat.ImageButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:contentDescription="TODO"
-        android:paddingBottom="@dimen/list_padding_vertical_author"
-        android:paddingEnd="@dimen/list_padding_horizontal_author"
-        android:paddingStart="@dimen/list_padding_horizontal_author" />
+            <ImageButton
+                android:id="@+id/image_prefer_stars"
+                style="@style/Base.Widget.AppCompat.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:contentDescription="TODO"
+                android:paddingBottom="@dimen/list_padding_vertical_author"
+                android:paddingEnd="@dimen/list_padding_horizontal_author"
+                android:paddingStart="@dimen/list_padding_horizontal_author" />
 
+            <ImageButton
+                android:id="@+id/image_show_comments"
+                style="@style/Base.Widget.AppCompat.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:contentDescription="TODO"
+                android:paddingBottom="@dimen/list_padding_vertical_author"
+                android:paddingEnd="@dimen/list_padding_horizontal_author"
+                android:paddingStart="@dimen/list_padding_horizontal_author" />
+
+
+            <ImageButton
+                android:id="@+id/image_open_browser"
+                style="@style/Base.Widget.AppCompat.ImageButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:contentDescription="TODO"
+                android:paddingBottom="@dimen/list_padding_vertical_author"
+                android:paddingEnd="@dimen/list_padding_horizontal_author"
+                android:paddingStart="@dimen/list_padding_horizontal_author" />
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
