--- a/app/src/main/res/layout-land/list_subreddit_detail.xml
+++ b/app/src/main/res/layout-land/list_subreddit_detail.xml
@@ -40,8 +40,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/background_light"
-                    android:orientation="vertical"
-                    android:padding="5dp">
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
