--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -17,7 +17,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <LinearLayout
             android:id="@+id/card_linear"
             android:layout_width="match_parent"
@@ -40,8 +39,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/background_light"
-                    android:orientation="vertical"
-                    android:padding="5dp">
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
