--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -50,25 +50,25 @@
                             android:id="@+id/tv_author"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_weight="1"
                             android:ellipsize="end"
                             android:fontFamily="@font/roboto_regular"
                             android:gravity="start"
-                            android:layout_weight="1"
                             android:maxLines="@integer/list_body_text_author"
                             android:paddingBottom="@dimen/list_padding_vertical_author"
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
+                            android:text=""
                             android:textColor="@color/textColorSecondary"
-                            android:textStyle="bold"
-                            android:text="" />
+                            android:textStyle="bold" />
 
 
                         <TextView
                             android:id="@+id/tv_points"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_regular"
                             android:layout_gravity="end"
+                            android:fontFamily="@font/roboto_regular"
                             android:paddingBottom="@dimen/list_padding_vertical_author"
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
@@ -83,29 +83,52 @@
                             android:paddingBottom="@dimen/list_padding_vertical_author"
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
+                            android:text=""
                             android:textColor="@color/textColorSecondary"
-                            android:textStyle="italic"
-                            android:text="" />
+                            android:textStyle="italic" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_title_detail"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            style="@style/TextAppearance.AppCompat.Title"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/roboto_regular"
+                            android:gravity="start|center_vertical"
+                            android:textColor="@color/textColorPrimary" />
+
+
+
+                        <TextView
+                            android:id="@+id/tv_body"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/roboto_regular"
+                            android:gravity="start|center_vertical"
+                            android:paddingBottom="@dimen/list_padding_vertical_author"
+                            android:paddingEnd="@dimen/list_padding_horizontal_author"
+                            android:paddingStart="@dimen/list_padding_horizontal_author"
+                            android:textColor="@color/textColorSecondary" />
+
 
                     </LinearLayout>
 
 
-                    <TextView
-                        android:id="@+id/tv_body"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/roboto_regular"
-                        android:gravity="start|center_vertical"
-                        android:paddingBottom="@dimen/list_padding_vertical_author"
-                        android:paddingEnd="@dimen/list_padding_horizontal_author"
-                        android:paddingStart="@dimen/list_padding_horizontal_author"
-                        android:textColor="@color/textColorSecondary"/>
+
+
 
                 </LinearLayout>
             </LinearLayout>
         </LinearLayout>
 
-        <include layout="@layout/inc_select_bottom"/>
+        <include layout="@layout/inc_select_bottom" />
 
     </LinearLayout>
 
