--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -4,6 +4,7 @@
     <integer name="list_body_text_title">2</integer>
     <integer name="list_body_text_subtitle">1</integer>
     <integer name="list_body_text_author">1</integer>
+    <integer name="list_body_text_detail">30</integer>
 
     <integer name="anim_duration_long">600</integer>
 
