--- a/app/src/main/res/layout/activity_sub_reddit_detail.xml
+++ b/app/src/main/res/layout/activity_sub_reddit_detail.xml
@@ -5,16 +5,36 @@
     android:id="@+id/subreddit_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".ui.activity.SubRedditDetailActivity">
 
     <include layout="@layout/app_bar_layout" />
 
-    <FrameLayout
-        android:id="@+id/fragment_subreddit_detail_container"
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:id="@+id/fragment_subreddit_selected_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <FrameLayout
+                android:id="@+id/fragment_subreddit_detail_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
     <!-- <include layout="@layout/inc_swipe" />
 -->
 </android.support.design.widget.CoordinatorLayout>
