--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -12,7 +12,6 @@
     app:cardElevation="@dimen/list_card_elevation">
 
     <LinearLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -38,9 +37,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/background_light"
-                    android:paddingTop="8dp"
+                    android:orientation="vertical"
                     android:paddingBottom="8dp"
-                    android:orientation="vertical">
+                    android:paddingTop="8dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -72,8 +71,8 @@
                             android:paddingBottom="@dimen/list_padding_vertical_author"
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
-                            android:textStyle="bold"
-                            android:textColor="@color/textColorSecondary" />
+                            android:textColor="@color/textColorSecondary"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/tv_postedOn"
