--- a/app/src/main/res/layout/activity_sub_reddit_detail.xml
+++ b/app/src/main/res/layout/activity_sub_reddit_detail.xml
@@ -15,6 +15,8 @@
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:scrollIndicators="start"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
