--- a/app/src/main/res/layout/fragment_subreddit_detail.xml
+++ b/app/src/main/res/layout/fragment_subreddit_detail.xml
@@ -7,6 +7,7 @@
         android:id="@+id/rv_fragment_reddit_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="16dp"
-        android:layoutAnimation="@anim/layout_animation_fall_down"/>
+        android:layoutAnimation="@anim/layout_animation_fall_down"
+        android:nestedScrollingEnabled="false"
+        android:scrollbars="none" />
 </FrameLayout>
