--- a/app/src/main/res/layout/list_subreddit_selected.xml
+++ b/app/src/main/res/layout/list_subreddit_selected.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_regular"
-            android:gravity="center_vertical"
+            android:gravity="center|center_vertical"
             android:maxLines="@integer/list_body_text_title"
             android:paddingBottom="@dimen/list_padding_vertical_title"
             android:paddingEnd="@dimen/list_padding_horizontal_title"
@@ -59,7 +59,7 @@
             android:gravity="center_horizontal"
             android:maxLines="@integer/list_body_text_subtitle"
             android:paddingBottom="@dimen/list_padding_vertical_author"
-            android:paddingEnd="@dimen/list_padding_horizontal_author"
+            android:paddingEnd= "@dimen/list_padding_horizontal_author"
             android:paddingStart="@dimen/list_padding_horizontal_author"
             android:textColor="@color/deep_orange_A400"
             android:textStyle="italic" />
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_thin"
-            android:gravity="center_horizontal"
+            android:gravity="center_vertical|end"
             android:maxLines="@integer/list_body_text_author"
             android:paddingBottom="@dimen/list_padding_vertical_author"
             android:paddingEnd="@dimen/list_padding_horizontal_author"
@@ -79,20 +79,6 @@
             android:textColor="@color/textColorSecondary"
             android:textStyle="normal" />
 
-        <TextView
-            android:id="@+id/tv_created_utc_selected"
-            style="@style/TextAppearance.AppCompat.Body2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="@font/roboto_thin"
-            android:gravity="center_horizontal"
-            android:maxLines="@integer/list_body_text_author"
-            android:paddingBottom="@dimen/list_padding_vertical_author"
-            android:paddingEnd="@dimen/list_padding_horizontal_author"
-            android:paddingStart="@dimen/list_padding_horizontal_author"
-            android:textColor="@color/textColorSecondary"
-            android:textStyle="normal" />
 
 
     </LinearLayout>
@@ -135,6 +121,22 @@
             android:paddingStart="@dimen/list_padding_horizontal_author"
             android:textColor="@color/textColorSecondary"
             android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/tv_created_utc_selected"
+            style="@style/TextAppearance.AppCompat.Small"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto_regular"
+            android:gravity="center_vertical|end"
+            android:maxLines="@integer/list_body_text_author"
+            android:paddingBottom="@dimen/list_padding_vertical_author"
+            android:paddingEnd="@dimen/list_padding_horizontal_author"
+            android:paddingStart="@dimen/list_padding_horizontal_author"
+            android:textColor="@color/textColorSecondary"
+            android:textStyle="italic" />
+
     </LinearLayout>
 
     <include layout="@layout/inc_select_bottom"/>
