--- a/app/src/main/res/layout/list_subreddit_selected.xml
+++ b/app/src/main/res/layout/list_subreddit_selected.xml
@@ -30,7 +30,7 @@
             android:layout_height="match_parent"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_regular"
-            android:gravity="center|center_vertical"
+            android:gravity="center_vertical"
             android:maxLines="@integer/list_body_text_title"
             android:paddingBottom="@dimen/list_padding_vertical_title"
             android:paddingEnd="@dimen/list_padding_horizontal_title"
@@ -71,7 +71,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_thin"
-            android:gravity="center_vertical|end"
+            android:gravity="center_horizontal"
             android:maxLines="@integer/list_body_text_author"
             android:paddingBottom="@dimen/list_padding_vertical_author"
             android:paddingEnd="@dimen/list_padding_horizontal_author"
@@ -129,7 +129,7 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_regular"
-            android:gravity="center_vertical|end"
+            android:gravity="end"
             android:maxLines="@integer/list_body_text_author"
             android:paddingBottom="@dimen/list_padding_vertical_author"
             android:paddingEnd="@dimen/list_padding_horizontal_author"
