--- a/app/src/main/res/layout/activity_sub_reddit_detail.xml
+++ b/app/src/main/res/layout/activity_sub_reddit_detail.xml
@@ -12,11 +12,10 @@
 
 
     <android.support.v4.widget.NestedScrollView
-        android:id="@+id/scrollview"
+        android:id="@+id/nested_scrollview_detail"
+        style="@style/ScrollBarStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:scrollIndicators="start"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
