--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -8,11 +8,17 @@
 
     <include layout="@layout/app_tab_layout" />
 
-    <FrameLayout
-        android:id="@+id/fragment_subreddit_container"
+    <android.support.v4.widget.NestedScrollView
+        style="@style/ScrollBarStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <FrameLayout
+            android:id="@+id/fragment_subreddit_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.NestedScrollView>
 
     <!-- <include layout="@layout/inc_swipe" />
 -->
