--- a/app/src/main/res/layout/activity_subreddit.xml
+++ b/app/src/main/res/layout/activity_subreddit.xml
@@ -10,6 +10,7 @@
 
     <android.support.v4.widget.NestedScrollView
         style="@style/ScrollBarStyle"
+        android:id="@+id/nested_scrollview_subreddit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
