--- a/app/src/main/res/xml/pref_general_settings.xml
+++ b/app/src/main/res/xml/pref_general_settings.xml
@@ -20,9 +20,9 @@
 
     <SwitchPreferenceCompat
         android:defaultValue="true"
-        android:key="@string/pref_youtube_player"
-        android:summary="@string/summary_youtube_player"
-        android:title="@string/title_youtube_player" />
+        android:key="@string/pref_tab_history"
+        android:summary="@string/summary_tab_history"
+        android:title="@string/title_tab_history" />
 
     <ListPreference
         android:defaultValue="900"
