--- a/app/src/main/res/layout/activity_sub_reddit_detail.xml
+++ b/app/src/main/res/layout/activity_sub_reddit_detail.xml
@@ -10,32 +10,38 @@
 
     <include layout="@layout/app_bar_layout" />
 
-
-    <android.support.v4.widget.NestedScrollView
-        android:id="@+id/nested_scrollview_detail"
-        style="@style/ScrollBarStyle"
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_refresh_subreddit_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:isScrollContainer="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
+            android:id="@+id/nested_scrollview_detail"
+            style="@style/ScrollBarStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
-            <FrameLayout
-                android:id="@+id/fragment_subreddit_selected_container"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <FrameLayout
-                android:id="@+id/fragment_subreddit_detail_container"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                <FrameLayout
+                    android:id="@+id/fragment_subreddit_selected_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-        </LinearLayout>
+                <FrameLayout
+                    android:id="@+id/fragment_subreddit_detail_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
-    </android.support.v4.widget.NestedScrollView>
-    <!-- <include layout="@layout/inc_swipe" />
--->
+            </LinearLayout>
+
+        </android.support.v4.widget.NestedScrollView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </android.support.design.widget.CoordinatorLayout>
