--- a/app/src/main/res/xml/shortcuts.xml
+++ b/app/src/main/res/xml/shortcuts.xml
@@ -5,8 +5,8 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_all">
         <intent
-            android:action="@string/shortcut_intent_action_all"
-            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
+            android:action="info.pelleritoudacity.android.rcapstone.shortcut.all"
+            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
 
@@ -15,8 +15,8 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_popular">
         <intent
-            android:action="@string/shortcut_intent_action_popular"
-            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
+            android:action="info.pelleritoudacity.android.rcapstone.shortcut.popular"
+            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
 
@@ -25,8 +25,8 @@
         android:enabled="false"
         android:icon="@drawable/shortcut_search">
         <intent
-            android:action="@string/shortcut_intent_action_search"
-            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.MainActivity"
+            android:action="info.pelleritoudacity.android.rcapstone.shortcut.search"
+            android:targetClass="info.pelleritoudacity.android.rcapstone.ui.activity.SubRedditActivity"
             android:targetPackage="info.pelleritoudacity.android.rcapstone.free.debug" />
     </shortcut>
 
