settings menu add listpreference and fix results

--- a/app/src/main/res/xml/pref_general_settings.xml
+++ b/app/src/main/res/xml/pref_general_settings.xml
@@ -33,6 +33,24 @@
         android:positiveButtonText="@null"
         android:title="@string/pref_title_sync_frequency" />
 
+    <ListPreference
+        android:defaultValue="25"
+        android:entries="@array/pref_items_page_titles"
+        android:entryValues="@array/pref_items_page_values"
+        android:key="@string/pref_item_page"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="@string/pref_title_item_page" />
+
+    <ListPreference
+        android:defaultValue="5"
+        android:entries="@array/pref_depth_page_titles"
+        android:entryValues="@array/pref_depth_page_values"
+        android:key="@string/pref_depth_page"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null"
+        android:title="@string/pref_title_depth_page" />
+
     <info.pelleritoudacity.android.rcapstone.preference.DialogConfirm
         android:summary="@string/summary_clear_data"
         android:title="@string/title_clear_data" />
