--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/fragment_settings_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="@dimen/settings_margin"
-    android:orientation="vertical"
-    tools:ignore="MergeRootFrame" />
+    android:orientation="vertical" />
