--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -5,14 +5,14 @@
     android:layout_height="wrap_content"
     android:elevation="@dimen/list_app_bar_elevation"
     android:fitsSystemWindows="true"
-    android:theme="@style/AppTheme.AppBarOverlay">
+    android:theme="@style/AppThemeLight.AppBarOverlay">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?android:attr/actionBarSize"
         app:layout_scrollFlags="enterAlways|exitUntilCollapsed"
-        app:popupTheme="@style/AppTheme.PopupOverlay">
+        app:popupTheme="@style/AppThemeLight.PopupOverlay">
 
         <TextView
             style="@style/Base.TextAppearance.Widget.AppCompat.Toolbar.Title"
