--- a/app/src/main/res/layout/list_manage_subreddit.xml
+++ b/app/src/main/res/layout/list_manage_subreddit.xml
@@ -37,8 +37,8 @@
         android:layout_gravity="center_vertical"
         android:layout_marginStart="8dp"
         android:layout_weight="1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Small"
-        android:textColor="@android:color/black" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="?android:attr/textColorPrimary" />
 
 
     <ImageView
