--- a/app/src/main/res/layout/list_subreddit.xml
+++ b/app/src/main/res/layout/list_subreddit.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_subreddit"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/list_side_margin"
     android:layout_marginTop="@dimen/list_side_margin"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="?android:attr/colorBackground"
     app:cardElevation="@dimen/list_card_elevation">
 
     <LinearLayout
@@ -72,7 +73,7 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
-                android:textColor="@color/deep_orange_A400"
+                android:textColor="?android:attr/colorAccent"
                 android:textStyle="italic" />
 
             <TextView
@@ -87,9 +88,8 @@
                 android:paddingBottom="@dimen/list_padding_vertical_author"
                 android:paddingEnd="@dimen/list_padding_horizontal_author"
                 android:paddingStart="@dimen/list_padding_horizontal_author"
-                android:textColor="@color/textColorSecondary"
+                android:textColor="?android:attr/textColorSecondary"
                 android:textStyle="normal" />
-
 
 
         </LinearLayout>
@@ -178,7 +178,7 @@
 
         </LinearLayout>
 
-        <include layout="@layout/inc_select_bottom"/>
+        <include layout="@layout/inc_select_bottom" />
 
     </LinearLayout>
 
