--- a/app/src/main/res/layout/list_subreddit_detail.xml
+++ b/app/src/main/res/layout/list_subreddit_detail.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="?android:attr/colorBackground"
     app:cardElevation="@dimen/list_card_elevation">
 
     <LinearLayout
@@ -34,7 +34,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@android:color/background_light"
+                    android:background="?android:attr/colorBackground"
                     android:orientation="vertical"
                     android:paddingBottom="8dp"
                     android:paddingTop="8dp">
@@ -57,7 +57,7 @@
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
                             android:text=""
-                            android:textColor="@color/deep_orange_A400"
+                            android:textColor="?android:attr/colorAccent"
                             android:textStyle="bold|italic" />
 
                         <TextView
@@ -69,7 +69,7 @@
                             android:paddingBottom="@dimen/list_padding_vertical_author"
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
-                            android:textColor="@color/textColorSecondary"
+                            android:textColor="?android:attr/textColorSecondary"
                             android:textStyle="bold" />
 
                         <TextView
@@ -82,7 +82,7 @@
                             android:paddingEnd="@dimen/list_padding_horizontal_author"
                             android:paddingStart="@dimen/list_padding_horizontal_author"
                             android:text=""
-                            android:textColor="@color/textColorSecondary"
+                            android:textColor="?android:attr/textColorSecondary"
                             android:textStyle="italic" />
 
                     </LinearLayout>
@@ -97,7 +97,7 @@
                         android:paddingBottom="@dimen/list_padding_vertical_author"
                         android:paddingEnd="@dimen/list_padding_horizontal_author"
                         android:paddingStart="@dimen/list_padding_horizontal_author"
-                        android:textColor="@color/textColorSecondary"
+                        android:textColor="?android:attr/textColorSecondary"
                         android:visibility="visible" />
 
                 </LinearLayout>
