--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,9 @@
 
     <color name="colorBackgroundItemSelected">#fff9c4</color>
     <color name="colorBackgroundItemNoSelected">@color/white</color>
+    <color name="colorBackgroundCard">@color/white</color>
+
+    <color name="colorBackgroundCardNight">@color/grey_800</color>
 
     <color name="red_A400">#FF1744</color>
 
@@ -17,12 +20,21 @@
     <color name="red_700">#D32F2F</color>
     <color name="light_blue_A700">#0091EA</color>
     <color name="blue_A700">#2962FF</color>
+    <color name="blue_900">#01579B</color>
     <color name="grey_600">#757575</color>
+    <color name="grey_200">#EEEEEE</color>
+    <color name="grey_400">#BDBDBD</color>
+    <color name="grey_800">#424242</color>
     <color name="deep_orange_A400">#FF3D00</color>
+    <color name="light_green_A700">#64DD17</color>
+    <color name="amber_100">#FFECB3</color>
 
-    <!-- Standard colors -->
-    <color name="black">#000000</color>
-    <color name="white">#FFFFFF</color>
-
+    <color name="black">#FF000000</color>
+    <color name="white">#FFFFFFFF</color>
+    <color name="primary_dark_material_dark">#fc6565</color>
+    <color name="primary_material_dark">#ffffff</color>
+    <color name="colorBackgroundFloating">#424242</color>
+    <color name="foreground_material_dark">#ffffff</color>
+    <color name="deep_purple_A200">#7C4DFF</color>
 
 </resources>
